--- a/src/voronum/voronum.css
+++ b/src/voronum/voronum.css
@@ -2,6 +2,17 @@
     font-size: 20px;
 
 }
+.div_scrol{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+ 
+    width: 100%;
+    min-height: 0px;
+    max-height: 300px;
+    overflow: scroll;
+}
 .voronum{
     padding: 50px 0px;
     display: flex;
@@ -48,7 +59,7 @@
 }
 .voronman_ardjunq{
     width: 50%;
-    margin: 15px;
+    margin: 25px 0px;
     border: 2px solid #009900;
     padding: 10px;
     border-radius: 5px;
@@ -60,9 +71,8 @@
 }
 .voronman_ej{
     position: relative;
-    max-height: 300px;
-    min-height:  0px;
-    overflow-y: scroll;
+   
+    
     
   
     width: 100%;
@@ -140,14 +150,14 @@
         padding: 50px 0px;
     }
     .voronman_ardjunq{
-       
+           
             width: 60%;
-            margin: 15px;
+            margin: 25px 0px;
             border: 2px solid #009900;
             padding: 10px;
             border-radius: 5px;
             box-shadow: rgba(41, 46, 51, 0.48) 6px 2px 16px 0px, rgba(49, 46, 46, 0.8) -6px -2px 16px 0px;
-        
+            
     }
     .jnjel_div{
         display: flex;
@@ -179,5 +189,17 @@
         height: 30px;
         font-size: 20px;
         border-radius: 15px 0 0 15px;
+    }
+    .voronman_ej{
+        position: relative;
+       
+        
+        
+      
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
